--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+files/
+manifest/
+asset_indexes/
+asset_indexes_by_date/
+diffs/
+objects/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
